tests/lean/doNotation1.lean.expected.out
doNotation1.lean:4:0: error: 'y' cannot be reassigned
doNotation1.lean:8:2: error: 'y' cannot be reassigned
doNotation1.lean:11:0: error: 'p' cannot be reassigned
doNotation1.lean:20:7: error: invalid reassignment, value has type
  Vector Nat (n + 1)
but is expected to have type
  Vector Nat n
doNotation1.lean:25:7: error: invalid reassignment, value has type
  Bool
but is expected to have type
  Nat
doNotation1.lean:24:0: error: type mismatch, 'for' has type
  PUnit
but is expected to have type
  List Bool
doNotation1.lean:28:0: error: type mismatch, 'for' has type
  PUnit
but is expected to have type
  List Nat
doNotation1.lean:33:2: error: invalid 'do' element, it must be inside 'for'
doNotation1.lean:37:2: error: invalid 'do' element, it must be inside 'for'
doNotation1.lean:40:0: error: must be last element in a 'do' sequence
def f10 : Nat → IO Unit :=
fun (x : Nat) => IO.println x
doNotation1.lean:51:0: error: type mismatch
  IO.mkRef true
has type
  EIO IO.Error (IO.Ref Bool)
but is expected to have type
  EIO IO.Error Unit
doNotation1.lean:58:2: error: type mismatch, result value has type
  Unit
but is expected to have type
  Bool
doNotation1.lean:66:0: error: 'do' element is unreachable
